3 fixes: - contextual menu does not go offscreen anymore - source text does not flow out of the box anymore - pressing enter in concordance search does not trigger a carriage return anymore

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -831,7 +831,7 @@ section.status-new.opened .editarea
     {
     width: 45.5%;
     table-layout: fixed;
-    float: none;
+    float: left;
     margin: 0px 1px 0px 0;
     padding: 3px 20px;
     text-align: left;
